--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,11 @@
 </head>
 <body>
   <div id="timer">25:00</div>
-  <button id="startButton">Start</button>
-  <button id="resetButton">Reset</button>
-
+  <div class="button-container">
+  <button id="startButton" class="buttons">Start</button>
+  <button id="stopButton" class="buttons">Stop</button>
+  <button id="resetButton" class="buttons">Reset</button>
+</div>
   <script src="popup.js"></script>
 </body>
 </html>
